test/fails/bad_tags/assign9.lgl
vec2 x = [[1.], [1.]]; // No implicit cast from vectors to matrices